# Aurora

./: .gitignore  README.md  config.py  requirements.txt  setup.py
aurora/: __init__.py
aurora/autodiff/: __init__.py  autodiff.py  executor.py  gradients.py  helper.py  math.py  numerical_gradient.py  utils.py
aurora/datasets/: __init__.py  generator.py  mnist.py  synthetic.py
aurora/ndarray/: __init__.py  _base.py  gpu_op.py  ndarray.py
aurora/nn/: __init__.py  activations.py  conv.py  fast_pooling.pyx  im2col.pyx  loss_functions.py  pooling.py  utils.py
aurora/nn/pyx/: fast_pooling.pyx  im2col.pyx
aurora/optim/: __init__.py  adam.py  base.py  sgd.py
cuda/: Makefile  c_runtime_api.cc  cpu_device_api.cc  cpu_device_api.h  device_api.h  dlarray.h  runtime_base.h
cuda/src/: CMakeLists.txt  c_runtime_api.cc  c_runtime_api.h  cpu_device_api.cc  cpu_device_api.h  cuda_device_api.cc  cuda_device_api.h  cudnn_operations.cu  device_api.h  dlarray.h  gpu_op.cu  runtime_base.h
examples/: linear_regression.py  linear_regression_gpu.py  linear_regression_optim.py  linear_regression_using_parameter.py  mnist.py  mnist_cnn.py  simple_neural_network.py  softmax.py  toy_neural_network.py
examples/notebooks/: Simple_Neural_Network.ipynb  Softmax_Classifier.ipynb  mnist_cnn.ipynb
tests/: autodiff_test.py  test_autodiff_cpu.py  test_autodiff_gpu.py  test_gpu_operations.py
tests/nn_primitives/: test_cython.py
tests/utils/: gradient_check.py
